# animations

./: .gitignore  animations.cabal  stack.yaml
app/: Main.hs
applicative/tuple/: Main.hs
fold/: Main.hs
functor/maybe/: Main.hs
functor/tuple/: Main.hs
monad/maybe/: Main.hs
src/: Common.hs
src/Applicative/: Common.hs
src/Applicative/Tuple/: Animation.hs  Glyph.hs  Scene.hs
src/Fold/: Animation.hs  Glyph.hs  Scene.hs
src/Functor/: Common.hs
src/Functor/Maybe/: Animation.hs  Glyph.hs  Scene.hs
src/Functor/Tuple/: Animation.hs  Glyph.hs  Scene.hs
src/Monad/: Common.hs
src/Monad/Maybe/: Animation.hs  Common.hs
src/Monad/Maybe/Explicit/: Glyph.hs  Scene.hs
src/Monad/Maybe/Sugared/: Glyph.hs  Scene.hs
src/Zip/: Animation.hs  Glyph.hs  Scene.hs
zip/: Main.hs
